force-app/main/default/objects/ADM_Comment__c/ADM_Comment__c.object-meta.xml
<CustomObject>
    <label>Comment</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{000}</displayFormat>
        <label>Story Comment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>