force-app/main/default/objects/ADM_Comment__c/fields/Body__c.field-meta.xml
<CustomField>
    <fullName>Body__c</fullName>
    <label>Comment</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>