force-app/main/default/objects/ADM_Comment__c/fields/Comment_Created_By__c.field-meta.xml
<CustomField>
    <fullName>Comment_Created_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comment Created By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Comments</relationshipName>
    <type>Lookup</type>
</CustomField>