force-app/main/default/objects/ADM_Comment__c/fields/Comment_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Comment_Created_Date__c</fullName>
    <label>Comment Created Date</label>
    <type>DateTime</type>
</CustomField>