force-app/main/default/objects/ADM_Comment__c/fields/LocaleCreatedDate__c.field-meta.xml
<CustomField>
    <fullName>LocaleCreatedDate__c</fullName>
    <label>LocaleCreatedDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>