force-app/main/default/objects/ADM_Comment__c/fields/Preserve_Formatting__c.field-meta.xml
<CustomField>
    <fullName>Preserve_Formatting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to decide if we are going to surround our comment body with a &quot;PRE&quot; tag</description>
    <label>Preserve Formatting</label>
    <type>Checkbox</type>
</CustomField>