force-app/main/default/objects/ADM_Comment__c/fields/Priority_Override_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Priority_Override_Explanation__c</fullName>
    <description>Used to store what the reason for a priority override was</description>
    <label>Priority Override Explanation</label>
    <type>TextArea</type>
</CustomField>