force-app/main/default/objects/ADM_Comment__c/validationRules/Body_is_not_null.validationRule-meta.xml
<ValidationRule>
    <fullName>Body_is_not_null</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( Body__c )</errorConditionFormula>
    <errorMessage>The comment body cannot be blank!</errorMessage>
</ValidationRule>